# Neural-Network-USTC

./: .gitignore  README.md  eval.py
Homework01/: README.md  concrete regression analysis.html  concrete regression analysis.ipynb
Homework02/: README.md  pyproject.toml  train.py
Homework02/configs/: __init__.py  cnn.py  default.py  resnet111.py  resnet18.py  seresnet18.py
Homework02/datasets/: __init__.py
Homework02/engine/: __init__.py  evaluator.py
Homework02/models/: cnn.py  seresnet.py
Homework02/outputs/cnn/20260419_015547/: history.csv  history.json
Homework02/outputs/resnet111/20260419_031125/: dataset_stats.json  history.csv  history.json  last.pt  per_class_accuracy.json
Homework02/outputs/seresnet111/20260419_023002/: best.pt  config.json  confusion_matrix.npy  history.json  last.pt
Homework02/utils/: checkpoint.py  io.py  metrics.py  plot.py  reporting.py  seed.py
configs/: seresnet111.py
datasets/: svhn_mat.py
engine/: trainer.py
models/: __init__.py  cnn.py  resnet.py  se.py
outputs/cnn/20260419_015547/: best.pt  config.json  confusion_matrix.npy  last.pt  per_class_accuracy.json  test_metrics.json
outputs/resnet111/20260419_031125/: best.pt  config.json  confusion_matrix.npy  test_metrics.json
outputs/seresnet111/20260419_023002/: history.csv  per_class_accuracy.json  test_metrics.json
utils/: __init__.py  logger.py
