[project]
name = "svhn-cls"
version = "0.1.0"
description = "PyTorch SVHN classification project for CNN, ResNet, and SE-ResNet comparison."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "absl-py>=2.1.0",
    "matplotlib>=3.9.0",
    "ml-collections>=0.1.1",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "torch",
    "torchvision",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true